--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,38 +1,100 @@
 body {
     font-family: 'Arial', sans-serif;
     line-height: 1.6;
-    background-color: #f4f4f4;
+    background-color: #f0f4f8;
     color: #333;
     margin: 0;
     padding: 0;
 }
 
-h1, h2 {
-    color: #0056b3;
-    text-align: center;
-}
 
 h1 {
+    text-align: center;
     font-size: 2.5em;
     margin-top: 20px;
+    color: #2c3e50;
 }
 
 h2 {
+    text-align: center;
     font-size: 1.8em;
     margin-bottom: 20px;
-    border-bottom: 2px solid #0056b3;
-    display: inline-block;
+    border-bottom: 3px solid #2c3e50;
     padding-bottom: 5px;
+    color: #2980b9;
 }
 
-p, ul {
-    margin: 20px;
+a {
+    text-decoration: none;
+    color: #2980b9;
+    font-weight: bold;
+    transition: color 0.3s;
+}
+
+a:hover {
+    color: #e74c3c;
+}
+
+/* Image */
+img {
+    display: block;
+    margin: 0 auto;
+    border-radius: 8%;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+    margin-bottom: 20px;
+    border: 5px transparent #3498db;
+}
+
+/* Summary Section */
+p {
+    text-align: justify;
+    max-width: 800px;
+    margin: 0 auto;
+    background-color: #ecf0f1;
+    padding: 15px;
+    border-radius: 10px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    color: #2c3e50;
+}
+
+/* Experience Section */
+ul {
+    list-style-type: none;
+    max-width: 800px;
+    margin: 20px auto;
     padding: 0;
 }
 
-/* Links */
-a {
-    text-decoration: none;
-    color: #0056b3;
-    font-weight: bold;
+ul li {
+    background: #fdfefe;
+    margin: 10px 0;
+    padding: 15px;
+    border-left: 8px solid #2980b9;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    border-radius: 5px;
+    transition: background 0.3s;
 }
+
+ul li:hover {
+    background: #d6eaf8;
+}
+
+
+footer {
+    text-align: center;
+    background-color: #2c3e50;
+    color: white;
+    padding: 15px 0;
+    margin-top: 40px;
+    font-size: 0.9em;
+    border-top: 3px solid #2980b9;
+}
+
+
+.links-container {
+    text-align: center;
+    margin-top: 10px;
+    margin-bottom: 20px; 
+    font-size: 1.1em; 
+}
+
